Added GET endpoint for tags
